--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "animate.css": "4.1.1",
+    "bootstrap": "4.6.0",
     "react": "^17.0.2",
+    "react-animate-on-scroll": "2.1.5",
+    "react-bootstrap": "1.6.1",
     "react-dom": "^17.0.2",
+    "react-reveal": "1.2.2",
     "react-scripts": "4.0.3",
+    "react-scroll-motion": "0.2.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
